# fROCtals

./: .gitignore  README.md  brots.roc  mandelbrot.hs  mandelbrot.js  mandelbrot.roc
benchmark-results/: AMD3800X_1K_iters.csv  AMD3800X_1K_iters.json  AMD3800X_1K_iters.md  AMD3800X_1K_iters.txt  AMD3800X_1M_iters.txt  AppleM1_1K_iters.csv  AppleM1_1K_iters.json  AppleM1_1K_iters.md  AppleM1_1M_iters.txt
hs-mandelbrot/: hs-mandelbrot.cabal
hs-mandelbrot/app/: Main.hs
rs-mandelbrot/: Cargo.toml
rs-mandelbrot/src/: main.rs
