cabal-version:      3.0
name:               hs-mandelbrot
version:            0.1.0.0
-- synopsis:
-- description:
license:            WTFPL
license-file:       LICENSE
author:             Bryce Miller
maintainer:         sandprickle@users.noreply.github.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hs-mandelbrot
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.17.0.0

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O2
